poprawienie css wyrównanie

--- a/puzzlechessdb/templates/chessfen/index.html
+++ b/puzzlechessdb/templates/chessfen/index.html
@@ -15,6 +15,7 @@
 		<a href="#">O projektcie</a>
 	</nav>
 	<main>
+		<div id="container">
 		<h2>PUZZLECHESSFEN!</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper neque nec purus laoreet,</p>
 		<svg viewBox="0 0 400 400">
@@ -24,7 +25,7 @@
   <label for="input-chess-fen">FEN:</label>
   <input type="text" id="input-chess-fen" name="chess-fen" placeholder="Wpisz FEN" required>
 			<button id="send-fen-btn" class="btn">Wyślij FEN</button>
-
+</div>
 </div>
 	</main>
 </body>
