--- a/puzzlechessdb/templates/chessfen/style.css
+++ b/puzzlechessdb/templates/chessfen/style.css
@@ -3,6 +3,8 @@ body {
   color: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 header {
@@ -43,11 +45,16 @@ p {
   line-height: 1.5;
   margin: 0 10px;
 }
+label {
+  display: block;
+  margin-bottom: 10px;
+}
 
 svg {
   margin: 20px auto;
   max-width: 400px;
 }
+
 input[type="text"],
 svg {
   box-sizing: border-box;
@@ -58,10 +65,30 @@ input[type="text"] {
   border-radius: 4px;
   font-size: 16px;
   margin: 10px auto;
+  margin-top: 20px; /* <-- added margin-top */
   padding: 10px;
   width: 60%;
-
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input[type="text"], button {
+  margin: 10px;
+}
+
+input[type="text"] {
+  background-color: #fff;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin: 10px auto;
+  padding: 10px;
+  width: 60%;
+}
+
 .btn {
   background-color: #8B0000;
   color: #fff;
@@ -72,6 +99,8 @@ input[type="text"] {
   border-radius: 8px;
   text-transform: uppercase;
   transition: background-color 0.3s ease;
+  margin-top: 10px;
+  width: 60%;
 }
 
 .btn:hover {
