--- a/puzzlechessdb/templates/chessfen/style.css
+++ b/puzzlechessdb/templates/chessfen/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2c3e50;
+    background-image: url("https://media.discordapp.net/attachments/1020315018111230042/1076640212375044136/to_dla_joinego.png");
   color: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
