--- a/puzzlechessdb/templates/chessfen/index.html
+++ b/puzzlechessdb/templates/chessfen/index.html
@@ -12,8 +12,8 @@
 	<nav>
 		<a href="#">Strona główna</a>
 		<a href="#">Dzienne zadania</a>
-		<a href="#">Instrukcjia obsługi</a>
-		<a href="#">O projektcie</a>
+		<a href="{% url 'inst' %}">Instrukcjia obsługi</a>
+		<a href="https://github.com/paweltheriperr/puzzlechessdb">O projektcie</a>
 	</nav>
 	<main>
 		<div id="container">
