--- a/puzzlechessdb/templates/chessfen/inst.html
+++ b/puzzlechessdb/templates/chessfen/inst.html
@@ -10,9 +10,9 @@
 		<h1>Instrukcja tworzenia FEN szachowego</h1>
 	</header>
 	<nav>
-		<a href="#">Strona główna</a>
-		<a href="#">Dzienne zadania</a>
-		<a href="inst">Instrukcjia obsługi</a>
+		<a href="{% url 'index' %}">Strona główna</a>
+		<a href="{% url 'dcp' %}">Dzienne zadania</a>
+		<a href="{% url 'inst' %}">Instrukcjia obsługi</a>
 		<a href="https://github.com/paweltheriperr/puzzlechessdb">O projektcie</a>
 	</nav>
 		<main>
