Dodanie do inst numeru 6

--- a/puzzlechessdb/templates/chessfen/inst.html
+++ b/puzzlechessdb/templates/chessfen/inst.html
@@ -40,6 +40,7 @@
 			<li>Oznaczamy możliwość bicia en passant, jeśli jest możliwa. W przeciwnym razie piszemy "-".</li>
 			<li>Oznaczamy liczbę wykonanych półruchów, czyli liczba pól przesuniętych bez bicia pionem lub ruchu króla. Jeśli nie było jeszcze wykonanych półruchów, piszemy 0.</li>
 			<li>Oznaczamy numer aktualnej tury, poczynając od 1.</li>
+			<li>Numer tury, w której nastąpił ostatni ruch bicia lub ruch pionem, potrzebne do określenia czy możliwe jest wykonanie ruchu "remisującego 50-ciu posunięć"</li>
 		</ol>
 	</main>
 </body>
